# native-titlebar

./: Cargo.toml  README.md  build.rs  package.json
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: titlebar.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  native_titlebar.m
