[package]
name = "tauri-plugin-native-titlebar"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-native-titlebar"

[dependencies]
tauri = { version = "2.0.6" }
serde = "1.0"
thiserror = "2"


[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
cc = "1.2.16"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"
objc = "0.2"
